--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "zod": "^3.22.4"
   },
   "devDependencies": {
+    "@types/react": "^18.2.48",
     "eslint": "8",
     "eslint-config-next": "14.0.1",
     "sass": "^1.70.0"
